--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
-orbs:
-  node: circleci/node@4.0.0
-
-version: 2.1
+jobs:
+  sayhello:
+    description: A job that says Hello
+    machine: true
+    steps:
+      - run: echo "Hello World!"
 
 workflows:
-  app-tests:
+  build:
     jobs:
-      - node/test
+      - sayhello
