--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - run: curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.0/install.sh | bash
-      - run: source ~/.bashrc
+      - run: . ~/.nvm/nvm.sh
       - run: nvm --version
       - run: nvm install node
       - run: nvm use node
